--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
   </parent>
 
   <groupId>com.soebes.testing.jmockit</groupId>
-  <artifactId>first</artifactId>
   <version>0.1-SNAPSHOT</version>
 
   <name>JMockIt Test</name>
@@ -29,6 +28,18 @@
       <artifactId>testng</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.easytesting</groupId>
+      <artifactId>fest-assert-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <version>1.10</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
+  <artifactId>jmockit-examples</artifactId>
 </project>
